# Patient-Management

./: .env  .env.example  .gitattributes  .gitignore  JS.md  README.md  TODO.md  docker-compose.yml  first.md  json.json  rustt.md  tsconfig.json
READMEs/: ForBackendDevs.md
auth/: .env  Dockerfile  index.js  main.js  main.ts  package-lock.json  package.json  tsconfig.json
auth/prisma/: schema.prisma
backend/: Dockerfile  logger.js  logger.ts  main.js  main.ts  package-lock.json  package.json  script.js  script.ts
backend/middlewares/: verifyToken.js
backend/prisma/: schema.prisma
db-init/: Dockerfile  init.js  package-lock.json  package.json
db-init/models/: index.js
django_admin/: Dockerfile  requirements.txt
django_admin/app/: admin.py  models.py  views.py  views_auth.py
django_admin/django_admin/: settings.py  urls.py
patients/: Cargo.toml  Dockerfile
patients/migrations/2025-06-17-184651_create_users_patients_reports/: down.sql  up.sql
patients/src/: db.rs  main.rs  schema.rs
patients/src/handlers/: auth.rs  health.rs  mod.rs  patients.rs  reports.rs
patients/src/middleware/: auth_guard.rs
patients/src/models/: mod.rs  patient.rs  report.rs  user.rs
patients/src/utils/: auth.rs  db.rs  hash.rs
pgi_app/: .gitignore  README.md  pubspec.yaml
pgi_app/android/: gradle.properties
pgi_app/lib/: dashboard.dart  home_page.dart  log_visit_page.dart  login_screen.dart  main.dart  notifications_page.dart  ocr_io.dart  ocr_page.dart  ocr_web.dart  patient_detail_page.dart  patients_page.dart  profile_page.dart  pseudo_page.dart  (+4 more)
(+24 files in other folders)
